whitespace fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
   padding-bottom: 60px;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .body {
@@ -8,4 +10,17 @@
   padding-bottom: 40px;
   text-align: center;
   width: 100%;
+  text-align: center;
+}
+
+@media all and (min-width: 100px) and (max-width: 800px) {
+  .App {
+    text-align: center;
+    width: 100%;
+  }
+
+  .body {
+    text-align: center;
+    width: 100%;
+  }
 }
