--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -30,14 +30,17 @@
     margin-right: 25px;
     text-align: center;
   }
-  
-  .home {
-    text-align: center;
-    width: 400px;
-  }
-
+ 
   .panels {
     padding-right: 25px;
     padding-left: 25px;
+  }
+}
+
+@media all and (min-width: 800px) and (max-width: 1100px) {
+  .home {
+    margin-left: -60px;
+    margin-right: -60px;
+    text-align: center;
   }
 }
