--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media all and (min-width: 100px) and (max-width: 800px) {
+  body {
+    width: 100%;
+    margin: 0;
+  }
 }
